src/objects/TR1__SchedulerMethods__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Helper methods on/off switch</description>
    <fields>
        <fullName>TR1__Always_add_new_shifts_to_existing_CR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always add new shifts to existing CR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Book_using_check_box__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In scheduler pages booking popup, users can book shifts either by providing start &amp; end date values or by checking respective job shift check boxes.</description>
        <inlineHelpText>This will be more useful when there are multiple job shifts matching same candidate availability.</inlineHelpText>
        <label>Book using check box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Booking_Confirmation_by_SubStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When Checked, user can use Sub-Status field to determine whether the booking is a Tentative booking or Confirmed Booking. This will be applicable in Candidate, Vacancy Schedule, CR calendars &amp; Scheduler pages.</description>
        <label>Booking Confirmation by SubStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Placement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to book the candidates from Job/CR Calendar irrespective of whether Candidate availabilities are created or not</description>
        <label>Candidate Placement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__CreateOpportunityDiscussedRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>provide the name of method to be executed or not executed via scheduler</description>
        <label>Create Opportunity Discussed Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__CreateTimesheetsForPastOrThisWeek__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Create timesheet for past or this week</description>
        <label>CreateTimesheetsForPastOrThisWeek</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Create_unavailable_CA_for_simple_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting to enable unavailable CA creation while creating a closing/placement report for a simple job</description>
        <label>Create unavailable CA for simple Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Default_Date_View__c</fullName>
        <description>Deprecated. It can be Month, Week or Day.</description>
        <inlineHelpText>Deprecated. It is not in Use now. Instead use Default View Custom Metadata.</inlineHelpText>
        <label>Default Date View</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Display_CAs_on_Filter_Jobs_page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field tells if candidate availabilities on filter jobs page. If checked, candidate availabilities will be shown. If unchecked, vacancy schedules will be shown.</description>
        <label>Display CAs on Filter Jobs page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Display_VS_in_CR_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this is enabled all open Vacancy schedules of the Job will be displayed in CR Calendar</description>
        <label>Display VS in CR Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Display_V_shifts_on_Job_Schedular_page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field tells if vacancy timings on job schedular page. If checked, vacancy timings will be shown. If unchecked, candidate availability timings will be shown.</description>
        <label>Display V shifts on Job Schedular page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Distance_Type__c</fullName>
        <defaultValue>&apos;KM&apos;</defaultValue>
        <description>Distance Type (KM or Miles)</description>
        <inlineHelpText>KM/Miles</inlineHelpText>
        <label>Distance Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__GeoLocationsTriggerSwitch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to On/Off the trigger used to update Geo Locations</description>
        <label>GeoLocationsTriggerSwitch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Is_Medrecruit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for unique Medrecuit changes</description>
        <label>AdditionalSchedulerOptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__My_Candidates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fetches only the candidates owned by a user on filter candidates</description>
        <label>My Candidates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__My_Vacancies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>fetches only the Jobs that are owned by user</description>
        <label>My Vacancies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Number_of_Records_Per_Page__c</fullName>
        <description>This field is to store the Number of Records Per Page in the Scheduler pages</description>
        <label>Number of Records Per Page</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Partial_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is created to indicate  Full Match or Partial Match</description>
        <label>Partial Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Previously_Placed_Anywhere__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this is enabled, Previously Placed Anywhere Checkbox will be shown on Job Scheduler</description>
        <label>Previously Placed Anywhere</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Previously_Placed_at_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fetch the candidates placed with the same account (on Job).</description>
        <label>Previously Placed at Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Pull_Shifts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Pull Shift Timings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Send_Confirmation_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to send confirmation letters from closing report trigger</description>
        <label>Send Confirmation Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Sort_By_Job_Life_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will indicate whether all vacancies of the Job has to be considered while sorting the Candidates</description>
        <label>Sort By Job Life Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Worksite_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Worksite Location</label>
        <type>Checkbox</type>
    </fields>
    <label>Scheduler Methods</label>
</CustomObject>